20th commit...Able to store Location in CloudKit now

--- a/Peek/Info.plist
+++ b/Peek/Info.plist
@@ -40,5 +40,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Peek needs access to your location.</string>
 </dict>
 </plist>
